--- a/package.json
+++ b/package.json
@@ -6,17 +6,29 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/forms": "^0.4.0",
+    "faker": "^5.5.3",
+    "firebase": "^9.6.6",
+    "moment": "^2.29.1",
     "next": "latest",
+    "next-auth": "4.0.0-beta.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "recoil": "^0.6.1",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.5",
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
     "typescript": "4.5.4"
   }
